test/negative/enum_bad_variant.mut
# Negative: access an undefined enum variant
enum Color
    RED, GREEN, BLUE
end

x: i64 = Color.YELLOW
